Properly scopes the overflowing image issue on .big-story teasers

--- a/modules/media-object.scss
+++ b/modules/media-object.scss
@@ -99,6 +99,13 @@
       }
     }
 
+    .thumbnail {
+
+      a {
+        overflow: hidden;
+      }
+    }
+
     .text {
 
       h5 {
