--- a/utils/teaser.scss
+++ b/utils/teaser.scss
@@ -596,7 +596,6 @@
           }
 
           a {
-            overflow: hidden;
 
             &:focus,
             &:hover {
